@@ -402,12 +402,15 @@
         <!-- Set empty default values to avoid Maven leaving property references (${...}) when it doesn't find a value -->
 
         <surefire.jvm.args.memory>-Xmx512m -Xms128m</surefire.jvm.args.memory>
-        <surefire.jvm.args.misc>-Djdk.attach.allowAttachSelf=true</surefire.jvm.args.misc>
+        <surefire.jvm.args.misc></surefire.jvm.args.misc>
         <!-- JVM args to be customized depending on the Java version -->
         <surefire.jvm.args.java-version></surefire.jvm.args.java-version>
         <!-- JVM args generated by JaCoCo -->
         <surefire.jvm.args.jacoco></surefire.jvm.args.jacoco>
         <failsafe.jvm.args.jacoco></failsafe.jvm.args.jacoco>
+        <!-- JVM args to attach agents e.g. for Mockito -->
+        <surefire.jvm.args.agents>-javaagent:${org.mockito:mockito-core:jar}</surefire.jvm.args.agents>
+
         <!-- JVM args to be customized by each Maven module -->
         <surefire.jvm.args.module></surefire.jvm.args.module>
         <surefire.jvm.args.module.add-opens></surefire.jvm.args.module.add-opens>
@@ -426,8 +429,8 @@
             http://maven.apache.org/surefire/maven-surefire-plugin/faq.html#late-property-evaluation
             This is necessary for Jacoco to work as expected.
          -->
-        <surefire.jvm.args.no-jacoco>${surefire.jvm.args.memory} ${surefire.jvm.args.misc} ${surefire.jvm.args.java-version} ${surefire.jvm.args.module} ${test.launcher.args}</surefire.jvm.args.no-jacoco>
-        <failsafe.jvm.args.no-jacoco>${surefire.jvm.args.memory} ${surefire.jvm.args.misc} ${surefire.jvm.args.java-version} ${surefire.jvm.args.module} ${test.launcher.args} ${failsafe.jvm.args.hibernate-orm} ${failsafe.jvm.args.jdbc}</failsafe.jvm.args.no-jacoco>
+        <surefire.jvm.args.no-jacoco>${surefire.jvm.args.memory} ${surefire.jvm.args.misc} ${surefire.jvm.args.java-version} ${surefire.jvm.args.module} ${test.launcher.args} ${surefire.jvm.args.agents}</surefire.jvm.args.no-jacoco>
+        <failsafe.jvm.args.no-jacoco>${surefire.jvm.args.memory} ${surefire.jvm.args.misc} ${surefire.jvm.args.java-version} ${surefire.jvm.args.module} ${test.launcher.args} ${surefire.jvm.args.agents} ${failsafe.jvm.args.hibernate-orm} ${failsafe.jvm.args.jdbc}</failsafe.jvm.args.no-jacoco>
         <surefire.jvm.args>${surefire.jvm.args.no-jacoco} @{surefire.jvm.args.jacoco}</surefire.jvm.args>
         <failsafe.jvm.args>${surefire.jvm.args.no-jacoco} @{failsafe.jvm.args.jacoco}</failsafe.jvm.args>
 
